# scaleableDigest

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
YAML2STAR/: __main__.py  preprocessor.py
YAML2STAR/template/: README.md  helpers.vhd.j2
examples/: advanced.yml  jinja_render.py  show.yml  yaml.tcl
someGoodName/: __main__.py  preprocessor.py
someGoodName/schema/xsd/: test.xsd
someGoodName/templates/: FORMAT.vhd.j2
test/xml/: test.xml
