[metadata]
name = YAML2STAR
version = attr: YAML2STAR.__version__

author = me
author_email = some@lel.com

description = My package description
long_description = file: README.md

url = -
License = MIT

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:

install_requires =
    jinja2

[options.package_data]
* = *.j2


[options.packages.find]
exclude =
    test
